[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.47", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "tls-rustls-ring-native-roots"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
